# Erae-2-API-Interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Core/: AlignmentTools.h  Clipboard.h  GestureLooper.cpp  GestureLooper.h  LayoutActions.h  SelectionManager.h  ShapeLibrary.h  ShapeMorph.h  UndoManager.h
Source/Effects/: EffectRenderer.cpp  EffectRenderer.h  TouchEffect.h  TouchEffectEngine.cpp  TouchEffectEngine.h
Source/Erae/: EraeConnection.cpp  EraeConnection.h  EraeRenderer.cpp  EraeRenderer.h  EraeSysEx.h  FingerStream.h
Source/MIDI/: BehaviorEngine.cpp  BehaviorEngine.h  CVOutput.h  DawFeedback.h  EraeMidiOut.cpp  EraeMidiOut.h  MPEAllocator.cpp  MPEAllocator.h  OscOutput.h  ScaleQuantizer.h  VelocityCurve.h
Source/Model/: Behavior.h  Color.h  Layout.cpp  Layout.h  MultiPageLayout.h  Preset.cpp  Preset.h  Shape.h  VisualStyle.h
Source/Rendering/: FingerPalette.h  WidgetRenderer.cpp  WidgetRenderer.h
Source/UI/: ColorPicker7Bit.cpp  ColorPicker7Bit.h  EffectPanel.cpp  EffectPanel.h  EraeLookAndFeel.cpp  EraeLookAndFeel.h  GridCanvas.cpp  GridCanvas.h  MidiPanel.cpp  MidiPanel.h  OutputPanel.cpp  OutputPanel.h  PropertyPanel.cpp  PropertyPanel.h  SidebarTabBar.cpp  SidebarTabBar.h  Theme.h
Tests/: EffectTemplateTests.cpp
docs/: edit_shape_feature.tex  erae_shape_editor.tex  erae_shape_editor_thesis.tex
docs/erae_api_reference/: README_embodme.md  run_erae_api.py  setup.py
docs/erae_api_reference/erae/: erae_api_sysex.py  utils.py
